fix: visible page header separator (fixes SFKUI-7284)

--- a/packages/design/src/components/page-header/_page-header.scss
+++ b/packages/design/src/components/page-header/_page-header.scss
@@ -25,7 +25,6 @@ $page-header-separator-width: 1px !default;
         }
         &::after {
             content: " ";
-            background-color: $pageheader-color-separator-inverted;
             height: 1.38rem;
             padding: calc($page-header-separator-width / 2);
             margin: 0 size.$padding-100 0.155rem;
