--- a/packages/design/src/components/page-header/_variables.scss
+++ b/packages/design/src/components/page-header/_variables.scss
@@ -1,4 +1,3 @@
 $pageheader-color-text: var(--fkds-color-header-text-primary) !default;
 $pageheader-appname-color-text: var(--fkds-color-header-text-primary) !default;
-$pageheader-color-separator-inverted: var(--fkds-color-header-text-primary) !default;
 $pageheader-color-background: var(--fkds-color-header-background-primary) !default;
